@@ -1,31 +1,34 @@
+
 plugins {
-	id 'java'
+    id 'java'
 	id 'maven-publish'
+	id 'eclipse'
 }
 
 publishing {
 	publications {
-		baut(MavenPublication) {
+		dine(MavenPublication) {
 			from components.java
 		}
 	}
 
 	repositories {
 		if (project.hasProperty('maven_local_repo')) {
-			maven {
-				url maven_local_repo
-			}
-		} else {
-			mavenLocal()
+		println maven_local_repo
+		maven {
+			url maven_local_repo
+		}
+		}	 else {
+		mavenLocal()
 		}
 	}
 }
 
 repositories {
 	if (project.hasProperty('maven_local_repo')) {
-		maven {
+	    maven {
 			url maven_local_repo
-		}
+		} 
 	} else {
 		mavenLocal()
 	}
@@ -45,15 +48,25 @@ repositories {
 }
 
 dependencies {
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'org.codehaus.groovy:groovy:3.0.7'
+    implementation 'de.fekl:baut:1.0.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
 }
 
 group = 'de.fekl'
 version = '1.0.2'
-description = 'baut'
+description = 'dine'
 java.sourceCompatibility = JavaVersion.VERSION_15
 
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+compileTestJava {
+	options.compilerArgs += ['--enable-preview']
+}
 test {
 	useJUnitPlatform()
+	jvmArgs(['--enable-preview'])
 }
